--- a/Css/main.css
+++ b/Css/main.css
@@ -3,8 +3,8 @@
     --main-color:#1787e0;
     --main-alt-color:#2196f3;
     --main-transition: 0.4s;
-    --main-padding-top:50px;
-    --main-padding-bottom:50px;
+    --main-padding-top:20px;
+    --main-padding-bottom:20px;
     --text-color:#777;
 
 }
@@ -91,15 +91,13 @@ a{
 
 .header .logo{
     position: relative;
-    height: 80px;
+    height: 175px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.header .logo > p{
-    font-size: 30px;
-    font-weight: 900;
-    color: black;
+.header .logo > img{
+    max-width:100%;
 }
 .header .logo p span{
     color: red;
@@ -109,7 +107,8 @@ a{
         width: 100%;
         justify-content: center;
         align-items: center;
-        height: 140px;
+        height: 150px;
+        margin-bottom: 25px;
     }
 }
 .header .main-nav{
@@ -156,6 +155,41 @@ a{
     width: 100%;
     left: 0;
 }
+.header .container .tel{
+
+    display: flex;
+    position: absolute;
+    right: 33px;
+    bottom: 17px;
+    background-color: #eee;
+}
+@media(max-width:767px){
+    .header .container .tel{
+        margin: 3px 45px 19px 50px;
+    }
+}
+
+.header .container .tel button{
+    margin-left: 5px;
+    margin: 0 5px;
+    background-color: var(--main-color);
+    color: white;
+    border-radius: 5px;
+    border: none;
+    padding: 5px;
+}
+
+.header .container .tel span{
+color: red;
+font-size: 18px;
+font-weight: bold;
+display: none;
+}
+.header .container .tel span.active{
+    display: inline-block;
+    animation: slide 2s forwards;
+}
+
 /* End Header */
 /* Start Landing */
 .landing{
@@ -177,7 +211,7 @@ a{
     margin: 10px auto;
     position: relative;
     width: 800px;
-    height: 600px;
+    height: 400px;
 }
 @media(max-width:767px){
     .landing .slider-box{
@@ -211,11 +245,14 @@ a{
     opacity: 0;
     z-index: 1;
     transition: opacity 1s;
+    width: 800px;
+    height: 400px;
 }
 @media(max-width:767px){
     .landing .slider-box img{
         max-width: 100%;
         width: 300px;
+        height: 250px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -288,8 +325,8 @@ a{
 }
 .about-us .container{
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
-    gap: 50px;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 20px;
     position: relative;
 }
 .about-us .title{
@@ -315,7 +352,7 @@ a{
     position: relative;
     align-items: center;
     flex-wrap: wrap;
-    background-color: white;
+    background-color: #eee;
     border: 1px solid #eee;
     border-radius: 10px;
     box-shadow: 0 0 10px #ddd;
@@ -324,17 +361,19 @@ a{
 @media(max-width:767px) {
     .about-us .container .box{
         width: 365px;
+        margin-top: 10px;
 
     }
 }
 .about-us .container .box:hover{
     top: -30px;
 }
+
 .about-us .container .box  img{
-    margin: 10px auto;
-    padding: 10px;
-    width: 100%;
+    margin: 0;
+    padding: 0px;
     max-width: 100%;
+    border-radius: 10px;
 }
 @media(max-width:767px) {
     .about-us .container .box img{
@@ -342,12 +381,19 @@ a{
 
     }
 }
+.about-us .container .box .image-1{
+    margin: -10px 0 0;
+}
+.about-us .container .box .image-2,
+.about-us .container .box .image-3{
+    margin: -20px 0 0;
+}
 .about-us .container .box .content {
     background-color: #eee;
     text-align: center;
-    width: 550px;
-    height: 300px;
-    margin-bottom: 20px;
+    width: auto;
+    height: auto;
+    margin-bottom: 0px;
 }
 @media(max-width:767px) {
     .about-us .container .box .content{
@@ -365,8 +411,8 @@ a{
 }
 .about-us .container .box .content h2{
     color: var(--main-alt-color);
-    font-size: 28px;
-    margin-bottom: 40px;
+    font-size: 23px;
+    margin-bottom: 0px;
 }
 .about-us .container .box .content p{
     line-height: 1.8;
@@ -376,6 +422,90 @@ a{
     padding: 14px;
 }
 /* End About us */
+
+/* Start Devis */
+.devis{
+    padding-top: var(--main-padding-top);
+    padding-bottom: var(--main-padding-bottom);
+}
+.devis .container{
+    background-color: #fff;
+
+}
+@media(max-width:767px){
+    .devis .container{
+    display: flex;
+    max-width: 100%;
+    justify-content: center;
+    align-items: center;
+    }
+}
+.devis .container .content{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    text-align: center;
+    transition: var(--main-transition);
+}
+.devis .container .get-devis{
+    margin: 20px auto 0;
+    font-size: 35px;
+    font-weight: bold;
+    background-color: var(--main-alt-color);
+    color: white;
+    padding: 10px 25px;
+    border: 1px solid var(--main-alt-color);
+    border-radius: 10px;
+    cursor: pointer;
+    position: relative;
+    margin: 40px 0 100px;
+    transition: var(--main-transition);
+}
+.devis .container .get-devis::after{
+    font-family: "Font Awesome 6 Free";
+    content: "\f103";
+    font-weight: 900;
+    position: absolute;
+    bottom: -50px;
+    left: calc(50% - 10px);
+    transform: translateX(-50%);
+    color: var(--main-color);
+    font-size: 30px;
+    transition: var(--main-transition);
+    animation: bouncing 1.5s infinite;
+}
+.devis .container .get-devis:hover::after{
+    color: #1163a4;
+}
+.devis .container .info{
+    margin: 0px 15px;
+    display: none; 
+    transition: var(--main-transition);
+}
+.devis .container .info.active{
+    display: block;
+}
+.devis .container .info h3{
+    font-size: 22px;
+    border: 1px solid #ddd;
+    width: fit-content;
+    margin: 10px auto;
+    padding: 10px 20px;
+    background-color: white;
+    border-radius: 6px;
+}
+.devis .container .info p{
+    line-height: 2;
+    font-size: 18px;
+    margin: 10px 15px;
+    color: #777;
+}
+.devis .container .info p strong{
+    color: var(--main-color);
+    font-size: 22px;
+}
+/* End Devis */
 /* Start Contact */
 .contact{
     padding-top: var(--main-padding-top);
@@ -418,6 +548,11 @@ a{
     border-radius: 6px;
     position: relative;
     transition: var(--main-transition);
+}
+@media(max-width:767px){
+    .contact .container .contact-form form h2{
+        padding: 15px 7px;
+    }
 }
 
 .contact .container .contact-form form h2::before,
@@ -498,105 +633,8 @@ a{
 }
 
 /* End Contact */
-/* Start Devis */
-.devis{
-    padding-top: var(--main-padding-top);
-    padding-bottom: var(--main-padding-bottom);
-}
-.devis .container{
-    background-color: #eee;
 
-}
-@media(max-width:767px){
-    .devis .container{
-    display: flex;
-    max-width: 100%;
-    justify-content: center;
-    align-items: center;
-    }
-}
-.devis .container .content{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    text-align: center;
-    transition: var(--main-transition);
-    height: 100vh;
-}
-.devis .container .get-devis{
-    margin: 20px auto 0;
-    font-size: 25px;
-    font-weight: bold;
-    background-color: var(--main-alt-color);
-    color: white;
-    padding: 10px 25px;
-    border: 1px solid var(--main-alt-color);
-    border-radius: 10px;
-    cursor: pointer;
-    position: relative;
-    transition: var(--main-transition);
-}
-.devis .container .get-devis::after{
-    font-family: "Font Awesome 6 Free";
-    content: "\f103";
-    font-weight: 900;
-    position: absolute;
-    bottom: -50px;
-    left: calc(50% - 10px);
-    transform: translateX(-50%);
-    color: var(--main-color);
-    font-size: 30px;
-    transition: var(--main-transition);
-    animation: bouncing 1.5s infinite;
-}
-.devis .container .get-devis:hover::after{
-    color: #1163a4;
-}
-.devis .container .info{
-    margin: 0px 15px;
-    display: none; 
-    transition: var(--main-transition);
-}
-.devis .container .info.active{
-    display: block;
-}
-.devis .container .info h3{
-    font-size: 22px;
-    border: 1px solid #ddd;
-    width: fit-content;
-    margin: 10px auto;
-    padding: 10px 20px;
-    background-color: white;
-    border-radius: 6px;
-}
-.devis .container .info p{
-    line-height: 2;
-    font-size: 18px;
-    margin: 10px 15px;
-    color: #777;
-}
-.devis .container .info p strong{
-    color: var(--main-color);
-    font-size: 22px;
-}
-/* End Devis */
-/*Start Animation*/
-@keyframes bouncing {
-    0%,
-    10%,
-    20%,
-    50%,
-    80%,
-    100% {
-        transform: translateY(0);
-    }
-    40%,
-    60%{
-        transform: translateY(-15px);
-    }
-}
-/*End Animation*/
+
 /* Start Footer */
 .footer{
     padding-top: var(--main-padding-top);
@@ -682,3 +720,31 @@ a{
     font-weight: bold;
 }
 /* End Footer */
+
+/*Start Animation*/
+@keyframes bouncing {
+    0%,
+    10%,
+    20%,
+    50%,
+    80%,
+    100% {
+        transform: translateY(0);
+    }
+    40%,
+    60%{
+        transform: translateY(-15px);
+    }
+}
+
+@keyframes slide {
+    0% { transform: translateX(100%); }
+
+    100% { transform: translateX(0%); }
+}
+@-webkit-keyframes slide {
+    0% { transform: translateX(0%); }
+
+    100% { transform: translateX(100%); }
+}
+/*End Animation*/
