--- a/Css/main.css
+++ b/Css/main.css
@@ -144,7 +144,7 @@ a{
 .header .main-nav > li > a::before{
     content: "";
     position: absolute;
-    bottom: 0;
+    top: 0;
     left: -100%;
     height: 3px;
     background-color: var(--main-color);
