--- a/Css/main.css
+++ b/Css/main.css
@@ -491,7 +491,7 @@ display: none;
 }
 .about-us .container{
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
     gap: 20px;
     position: relative;
 }
@@ -538,6 +538,7 @@ display: none;
     margin-top: -10px;
 }
 .about-us .container .box  img{
+    width: 100%;
     margin: 0;
     padding: 0px;
     max-width: 100%;
@@ -546,7 +547,7 @@ display: none;
 @media(max-width:767px) {
     .about-us .container .box img{
         width: 365px;
-
+        max-width: 100%;
     }
 }
 .about-us .container .box .image-1{
@@ -684,6 +685,61 @@ display: none;
     font-size: 22px;
 }
 /* End Devis */
+/* Start Services */
+.services{
+    background-color: #eee;
+}
+.services .services-title {
+    padding-top: 50px;
+    padding-bottom: 0px;
+    text-align: center;
+}
+.services .services-title h2{
+    display: block;
+    width: fit-content;
+    margin: 20px auto;
+    font-size: 35px;
+    font-weight: bold;
+    background-color: var(--main-alt-color);
+    color: white;
+    padding: 10px 25px;
+    border: 1px solid var(--main-alt-color);
+    border-radius: 10px;
+    cursor: pointer;
+    position: relative;
+    transition: var(--main-transition);
+}
+.services .services-title h2:hover{
+    background-color: var(--main-color);
+    transform: scale(1.1);
+}
+.services .services-title p{
+    font-size: 24px;
+    font-weight: bold;
+    background-color: #ccc;
+    padding: 20px;
+    border-radius: 15px;
+    margin-top: 50px;
+}
+.services .services-box{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.services .services-boxs .services-box{
+    margin: 30px 0;
+}
+.services .services-boxs .services-box span{
+    font-size: 20px;
+    font-weight: bold;
+    background-color: rgb(33 150 243 / 70%);
+    color: white;
+    border-radius: 6px;
+    padding: 10px 15px;
+    margin: 10px;
+}
+/* End Services */
 /* Start Contact */
 .contact{
     padding-top: var(--main-padding-top);
